--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "babel-preset-expo": "~8.0.0",
     "@babel/core": "^7.0.0"
   },
-  "private": true
+  "private": true,
+  "resolutions": { "minimist": "^1.2.3" }
 }
